# sps_genai

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  test_gan.py  test_helper.py  test_vae.py  train_assignment3_gan.py  train_assignment4_diffusion.py  train_assignment4_energy.py  train_assignment_cnn.py
app/: bigram_model.py  embedding_model.py
checkpoints/: model_epoch_001.pth
checkpoints/assignment3_gan/: mnist_gan.pth
checkpoints/energy/: energy_cifar10.pth
helper_lib/: checkpoints.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py
