[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "matplotlib>=3.11.0",
    "numpy<2",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "spacy>=3.8.14",
    "torch==2.2.2",
    "torchvision==0.17.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true